--- a/trape.html
+++ b/trape.html
@@ -2,88 +2,74 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>IP Debug Tool</title>
-  <meta name="robots" content="noindex, nofollow">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sigma Tracer</title>
   <style>
-    body {
-      font-family: 'Courier New', monospace;
-      background: #0a0a0a; color: #0f0;
-      text-align: center; padding: 2rem;
-      margin: 0;
-    }
-    h1 { color: #0f0; text-shadow: 0 0 5px #0f0; }
-    input, button {
-      padding: 1rem; font-size: 1.2rem; margin: 0.5rem;
-      background: #111; color: #0f0; border: 1px solid #0f0;
-    }
+    body { font-family: 'Courier New', monospace; background: #000; color: #0f0; text-align: center; padding: 2rem; margin: 0; }
+    h1 { color: #0f0; text-shadow: 0 0 10px #0f0; }
+    input, button { padding: 1rem; font-size: 1.2rem; margin: 0.5rem; background: #111; color: #0f0; border: 1px solid #0f0; }
     button:hover { background: #0f0; color: #000; }
-    #map { width: 100%; height: 400px; margin: 2rem 0; border: 2px solid #0f0; }
-    .result {
-      background: #000; padding: 1rem; margin: 1rem auto;
-      border: 1px solid #0f0; text-align: left;
-      font-family: monospace; max-width: 600px; display: none;
-    }
+    #map { width: 100%; height: 450px; margin: 2rem 0; border: 3px solid #0f0; }
+    .info { background: #111; padding: 1.5rem; margin: 1rem auto; border: 1px solid #0f0; max-width: 700px; text-align: left; font-family: monospace; display: none; }
+    .live { color: #f00; animation: pulse 1.5s infinite; }
+    @keyframes pulse { 50% { opacity: 0.5; } }
   </style>
 </head>
 <body>
 
-  <h1>IP TRACER v2</h1>
-  <input type="text" id="ip" placeholder="Enter target IP..." style="width:300px;">
-  <button onclick="trace()">TRACE NOW</button>
+  <h1>SIGMA TRACER v9</h1>
+  <input type="text" id="ip" placeholder="Enter IP to DOMINATE..." style="width:300px;">
+  <button onclick="dominate()">DOMINATE</button>
 
-  <div id="result" class="result"></div>
+  <div id="info" class="info"></div>
   <div id="map"></div>
 
   <script>
     const WEBHOOK = 'https://discord.com/api/webhooks/1381021459350032484/Z-HEIw2n1czbqpnWl-UicGzWgfrHth3W0naPyAkIoI3Sf3bx4bsINYQJDnvIHf1ky0tL';
 
-    async function trace() {
+    async function dominate() {
       const ip = document.getElementById('ip').value.trim();
-      if (!ip) return alert('Enter an IP!');
+      if (!ip) return alert('ENTER IP TO DOMINATE');
 
       const res = await fetch(`https://ipapi.co/${ip}/json/`);
       const data = await res.json();
+      if (data.error) return alert('INVALID TARGET');
 
-      if (data.error) {
-        alert('Invalid IP or rate limited');
-        return;
-      }
-
-      // Show result
-      const r = document.getElementById('result');
-      r.style.display = 'block';
-      r.innerHTML = `
+      const info = document.getElementById('info');
+      info.style.display = 'block';
+      info.innerHTML = `
+        <strong class="live">TARGET LOCKED</strong><br><br>
         <strong>IP:</strong> ${data.ip}<br>
-        <strong>Location:</strong> ${data.city}, ${data.region}, ${data.country_name}<br>
-        <strong>ISP:</strong> ${data.org || 'Unknown'}<br>
-        <strong>Coords:</strong> ${data.latitude}, ${data.longitude}<br>
-        <strong>Hostname:</strong> ${data.hostname || 'N/A'}<br>
-        <strong>Threat:</strong> ${data.threat?.is_tor ? 'TOR' : data.threat?.is_proxy ? 'PROXY' : 'Clean'}
+        <strong>LOCATION:</strong> ${data.city}, ${data.region}, ${data.country_name} (${data.country})<br>
+        <strong>ISP:</strong> ${data.org || 'HIDDEN'}<br>
+        <strong>COORDINATES:</strong> ${data.latitude}, ${data.longitude}<br>
+        <strong>HOSTNAME:</strong> ${data.hostname || 'CLOAKED'}<br>
+        <strong>THREAT:</strong> ${data.threat?.is_tor ? 'TOR' : data.threat?.is_proxy ? 'PROXY' : 'CLEAN'}<br>
+        <strong>TIMEZONE:</strong> ${data.timezone}<br>
+        <strong>LIVE MAP:</strong> <a href="https://www.google.com/maps?q=${data.latitude},${data.longitude}" target="_blank">OPEN IN GOOGLE MAPS</a>
       `;
 
-      // Load map
-      const map = L.map('map').setView([data.latitude, data.longitude], 13);
-      L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-        attribution: 'OpenStreetMap'
-      }).addTo(map);
-      L.marker([data.latitude, data.longitude])
-        .addTo(map)
-        .bindPopup(`<b>${data.ip}</b><br>${data.city}, ${data.country_name}`)
+      const map = L.map('map').setView([data.latitude, data.longitude], 16);
+      L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
+      L.marker([data.latitude, data.longitude], {
+        icon: L.divIcon({ className: 'live', html: 'TARGET', iconSize: [100, 40] })
+      }).addTo(map)
+        .bindPopup(`<b class="live">TARGET: ${data.ip}</b><br>${data.city}, ${data.country_name}`)
         .openPopup();
 
-      // Send to Discord
       const embed = {
-        title: 'IP TRACED BY ADMIN',
+        title: 'SIGMA DOMINATION EXECUTED',
         color: 0xff0000,
         fields: [
           { name: 'Target IP', value: data.ip, inline: true },
-          { name: 'Location', value: `${data.city}, ${data.country_name}`, inline: true },
+          { name: 'Live Location', value: `${data.city}, ${data.country_name}`, inline: true },
+          { name: 'Coordinates', value: `${data.latitude}, ${data.longitude}`, inline: true },
           { name: 'ISP', value: data.org || 'Unknown', inline: true },
-          { name: 'Coords', value: `${data.latitude}, ${data.longitude}`, inline: true },
-          { name: 'Threat', value: data.threat?.is_tor ? 'TOR' : data.threat?.is_proxy ? 'PROXY' : 'Clean', inline: true }
+          { name: 'Threat', value: data.threat?.is_tor ? 'TOR' : data.threat?.is_proxy ? 'PROXY' : 'Clean', inline: true },
+          { name: 'Map', value: `https://www.google.com/maps?q=${data.latitude},${data.longitude}`, inline: false }
         ],
         timestamp: new Date().toISOString(),
-        footer: { text: 'trape.html accessed' }
+        footer: { text: 'Lxu00/MySite • SIGMA TRAP v9' }
       };
 
       fetch(WEBHOOK, {
@@ -94,9 +80,7 @@
     }
   </script>
 
-  <!-- Leaflet.js for map -->
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
-
 </body>
 </html>
